force-app/main/default/objects/Record_form_configuration__mdt/Record_form_configuration__mdt.object-meta.xml
<CustomObject>
    <label>Record form configuration</label>
    <pluralLabel>Record form configuration</pluralLabel>
</CustomObject>