force-app/main/default/objects/Record_form_configuration__mdt/fields/Default_Record_Model_Id__c.field-meta.xml
<CustomField>
    <fullName>Default_Record_Model_Id__c</fullName>
    <label>User Based Record Model Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>