force-app/main/default/objects/Record_form_configuration__mdt/fields/Docfab_Journal_Object__c.field-meta.xml
<CustomField>
    <fullName>Docfab_Journal_Object__c</fullName>
    <label>Docfab Journal Object</label>
    <length>40</length>
    <type>Text</type>
</CustomField>