force-app/main/default/objects/Record_form_configuration__mdt/fields/Form_uuid__c.field-meta.xml
<CustomField>
    <fullName>Form_uuid__c</fullName>
    <label>Form uuid</label>
    <length>50</length>
    <type>Text</type>
</CustomField>