force-app/main/default/objects/Record_form_configuration__mdt/fields/Market_unit_name__c.field-meta.xml
<CustomField>
    <fullName>Market_unit_name__c</fullName>
    <label>Market unit name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>