force-app/main/default/objects/Record_form_configuration__mdt/fields/Record_modal_id__c.field-meta.xml
<CustomField>
    <fullName>Record_modal_id__c</fullName>
    <label>Default Record model id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>