force-app/main/default/objects/Record_form_configuration__mdt/fields/Salesforce_User__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_User__c</fullName>
    <label>Salesforce User</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>